# String_Search

./: .gitignore  CMakeLists.txt  README.md  description.md  launching.md  practical_evaluation.md  tests.md  theoretical_evaluation.md  theory.md  todo.md
algorithms/: a.out  boyer_moore_search.hxx  knuth_morris_pratt_search.hxx  naive_string_search.hxx  rabin_karp_search.hxx
benchmark/: OUR_YOUNG_FOLKS.txt  a_tale_of_two_cities.cpp  benchmark.cpp  benchmark_AAAAAAA.cpp  cleopatra.txt  needle_OUR_YOUNG_FOLKS.txt  results__.txt
demo/: a.out  main.cxx  output.txt
scripts/: AAAAA_datagen.py  random_datagen.py  shaverma.sh
tests/: human_du_000.needle  human_du_001.needle  human_en_000.needle  human_en_001.needle  human_it_000.needle  human_it_001.needle  search_tests.cpp  trivial_empty_heystack.needle
